--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Pokedex</title>
 </head>
 <body>
+    <a href="index.html" class="logo"><img src="img/pokemon-logo.png" alt=""></a>
 
 
-
-<script src="script.js" refer></script>
+<script src="js/Pokedex.js" refer></script>
 </body>
 </html>
