--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Pokedex</title>
 </head>
 <body>
-    <a href="index.html" class="logo"><img src="img/pokemon-logo.png" alt=""></a>
+    <a href="index.html " class="logo"><img src="img/pokemon-logo.png" alt=""></a>
+
+    <div id="pokedex" class="container"></div>
 
 
 <script src="js/Pokedex.js" refer></script>
