--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 <body>
     <a href="index.html " class="logo"><img src="img/pokemon-logo.png" alt=""></a>
 
-    <div id="pokedex" class="container"></div>
+    <div class="container">
+        <h1>Pokedex</h1>
+    <input type="text" id="searchInput" placeholder="Search Pokemon" />
+    <button id="searchButton">Search</button>
+    <ul id="pokemonList"></ul>
+    </div>
+    
 
 
 <script src="js/Pokedex.js" refer></script>
