--- a/index.html
+++ b/index.html
@@ -5,33 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/fetch.js" defer></script>
     <title>Pokedex</title>
 </head>
 <body>
     <a href="index.html " class="logo"><img src="img/pokemon-logo.png" alt=""></a>
 
-    <div class="container">
-        <h1>Pokedex</h1>
-    <input type="text" id="searchInput" placeholder="Search Pokemon" />
-    <button id="searchButton">Search</button>
-    <ul id="pokemonList"></ul>
-    </div>
-    
+   <div class="destinationlist"></div>
 
-    <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-    </ul>
-
-
-<script src="js/Pokedex.js" refer></script>
 </body>
 </html>
